# Desafio-ETL

./: .dockerignore  .env_example.txt  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: auth.py  database.py  main.py  models.py
app/routes/: auth_router.py  upload_router.py
